--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -1595,6 +1595,7 @@
         background: url(img/main\ portada.png);
         background-position: bottom;
         background-size: 40em;
+        background-attachment: fixed;
     }
 
     .main::before {
