--- a/style.css
+++ b/style.css
@@ -198,19 +198,6 @@ id {
   /* Equal to rotateZ(45deg) */
 }
 
-.elemento__texto {
-  width: 100vw;
-  height: auto;
-  text-align: center;
-  padding: 10px;
-}
-
-.elemento__titulo {
-  font-size: 18px;
-  font-weight: 600;
-  color: white;
-}
-
 /*header*/
 .header {
   width: 100%;
@@ -1340,20 +1327,22 @@ summary {
   display: none;
   align-items: center;
   justify-content: center;
+ 
 }
 
 .iglesia__modal--active {
   display: flex;
+  transition: all 2s ease-in-out;
 
 }
 
 @keyframes myMove {
   from {
-    scale: .5;
+    transform: translateX(200%);
   }
 
   to {
-    scale: 1;
+    transform: translateX(0);
   }
 
 }
@@ -1363,7 +1352,7 @@ summary {
   height: auto;
   background: white;
   padding: 30px;
-  border-radius: 20px;
+  border-radius: 8px;
   transition: all 800ms;
   position: relative;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -1378,7 +1367,7 @@ summary {
   top: 0;
   left: 0;
   background: var(--color-uno);
-  border-radius: 20px 20px 0 0;
+  border-radius: 8px 8px 0 0;
 }
 
 .iglesia__modal__titulo {
@@ -1392,6 +1381,7 @@ summary {
   font-size: 12px;
   text-align: justify;
   line-height: 25px;
+  padding: 20px;
   margin-top: 100px;
 }
 
@@ -1403,7 +1393,7 @@ summary {
   margin: 20px auto 0;
   padding: 10px;
   background-color: var(--color-uno);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
   text-align: center;
   cursor: pointer;
 }
@@ -1668,7 +1658,7 @@ summary {
   right: 0;
   bottom: 0;
   z-index: 0;
-  background-color: rgba(0, 0, 0, .8);
+  background-color: rgba(0, 0, 0, .2);
   border-radius: 28px;
 }
 
