--- a/style.css
+++ b/style.css
@@ -24,10 +24,10 @@ id {
 
 /*Contenedor general (grilla layaut)*/
 .contenedor {
-  width: 95vw;
+  width: 98%;
   max-width: 80em;
 
-  margin: .5em auto;
+  margin: .5em .5em;
   grid-gap: .5em;
   display: grid;
 
@@ -59,8 +59,6 @@ id {
 .loader__contenedor {
   width: 100vw;
   height: 100vh;
-  /* background-color: #74EBD5;
-  background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%); */
   background: #16222A;
   /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #3A6073, #16222A);
@@ -221,7 +219,7 @@ id {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, .6);
+  background-color: rgba(0, 0, 0, .8);
   z-index: 0;
 }
 
@@ -260,8 +258,9 @@ id {
 
 /*Logo*/
 .navbar__logo {
-  width: 40px;
+  width: 45px;
   margin-left: 4em;
+
 }
 
 /*Lista enlaces*/
@@ -270,7 +269,7 @@ id {
   display: flex;
   text-transform: uppercase;
   color: black;
-  margin-right: 4em;
+
 }
 
 .navbar__link {
@@ -288,135 +287,90 @@ id {
   color: var(--color-tres);
 }
 
-/* .navbar__social {
+.navbar__social {
   display: flex;
   text-decoration: none;
   color: black;
   text-align: center;
   margin-right: 4em;
 }
-.navbar__social i{
+
+.navbar__social i {
   margin: 7px;
-} */
-
-
+}
 
 /*icono hamburguesa*/
 .navbar__menu {
   display: none;
 }
 
-/*Main (contendido principal*/
+/*Main (contendido principal)*/
 .main {
   width: 100%;
-  height: 700px;
-  background: url(img/portadaaa.jpg);
+  height: 450px;
+  background: url(img/main\ portada\ voltear.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: top;
   background-attachment: fixed;
+  background-position-x: -1em;
 
   grid-area: main;
   position: relative;
   display: flex;
   flex-wrap: nowrap;
   filter: contrast(100%);
-
-
-  /* animation: movimiento 9s linear alternate infinite; */
-}
-
-/* @keyframes movimiento {
-  from{
-    background-position: bottom left;
-  } to{
-    background-position: top right;
-  }
-} */
-
-
-/* social lateral */
-.main__social--lateral {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 80px;
-  right: 0;
-  text-decoration: none;
-  color: white;
-  background:#2f2840cf;
-  text-align: center;
-  padding: 15px;
- 
-}
-.main__social--lateral i{
-  cursor: pointer;
-  font-size: 25px;
-  margin: 7px;
 }
 
 .main::before {
   width: 100%;
-  height: 700px;
+  height: 450px;
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(13, 25, 52, 0.559);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 0;
 }
 
 .main__text {
-  width: 40%;
+  width: 60%;
   height: auto;
   text-align: left;
   color: white;
   z-index: 9999999;
   overflow: hidden;
-  background: #2f2840cf;
-
-
   display: flex;
   flex-direction: column;
   align-items: baseline;
   justify-content: center;
+  margin-left: 4em;
 
 }
 
-.main__social {
-  display: none;
-}
 
 .main__titulo {
-  font-size: 2.5em;
+  font-size: 3.5em;
   font-family: 'Lato', sans-serif;
   font-weight: 600;
-  /* margin: 10px auto; */
-  /* padding: 20px; */
-  /* text-shadow: 2px 2px 2px rgba(0, 0, 0, .5); */
-  margin: 20px 0 0 60px;
-
-
-
+  margin: 20px 0 0 0px;
 }
 
 .main__tituloPre {
-  font-size: 20px;
+  font-size: 25px;
   font-family: 'Cardo', serif;
-  font-weight: 100;
-  margin: 0 0 -10px 60px;
-
+  margin: 0 0 0 0px;
 }
 
 .main__tituloSub {
   width: 60%;
-  font-size: 12px;
+  font-size: 14px;
   /* margin: 18px; */
-  font-weight: 400;
+  line-height: 25px;
+  font-weight: 100;
   letter-spacing: 2px;
-  margin: 20px 0 0 60px;
+  margin: 30px 0 0 0px;
 }
 
 .main__tituloFondo {
@@ -439,21 +393,21 @@ id {
   height: 2px;
   background-color: var(--color-uno);
   /* margin: 15px auto; */
-  margin: 20px 0 0 60px;
+  margin: 10px 0 20px 0px;
 }
 
 .main__btn {
   width: auto;
   z-index: 1;
   background-color: var(--color-uno);
-  padding: 20px;
+  padding: 15px;
   /* margin: 15px auto; */
-  margin: 20px 0 0 60px;
+  margin: 20px 0 0 0px;
 
 }
 
 .main__btn input {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 600;
   border: none;
   color: black;
@@ -467,16 +421,16 @@ id {
 /*botón flotante de WhatsApp */
 .btn__wsp {
   position: fixed;
-  width: 55px;
-  height: 55px;
-  line-height: 55px;
-  bottom: 1.8em;
-  right: 26px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  bottom: 4em;
+  right: 29px;
   background: #0df053;
   color: #fff;
   border-radius: 50px;
   text-align: center;
-  font-size: 30px;
+  font-size: 28px;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
   z-index: 99;
   transition: all 300ms ease;
@@ -489,11 +443,12 @@ id {
   background-color: #fff;
 }
 
+
 /*Boton ir arriba*/
 .btn__scrolltop {
   font-size: 20px;
   position: fixed;
-  bottom: 10em;
+  bottom: 1em;
   right: 27px;
   padding: 12px 16px;
   background: var(--color-tres);
@@ -510,9 +465,10 @@ id {
   transform: translateX(0px);
 }
 
+
 /*Rehma*/
 .article {
-  /* scroll-margin-top: -90px; */
+  scroll-margin-top: 150px;
   width: 100%;
   height: auto;
   display: flex;
@@ -527,16 +483,15 @@ id {
 }
 
 .article__card {
-  width: 80%;
+  width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
+  text-align: justify;
   position: relative;
   border-radius: 8px;
-  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
   margin: 10em auto;
   padding: 40px;
 }
@@ -562,7 +517,7 @@ id {
   font-size: 14px;
   color: black;
   letter-spacing: 5px;
-  margin-top: 2em;
+
 }
 
 .article__card svg {
@@ -579,7 +534,7 @@ id {
 
 /* Pantalla dividida izquierda*/
 .dividida__left {
-  /* scroll-margin-top: 0px; */
+  scroll-margin-top: 280px;
   grid-area: divLeft;
   /* height: 100%; */
   height: auto;
@@ -592,6 +547,7 @@ id {
   padding: 0px;
   overflow: hidden;
   position: relative;
+
 }
 
 .dividida__left::before {
@@ -628,7 +584,7 @@ id {
   width: 100%;
   color: white;
   margin: 0 auto;
-  padding: 60px;
+  padding: 50px 4em 50px 0;
   text-align: left;
   /* background: linear-gradient( var(--color-tres), rgba(255, 255, 255, 0.289), rgba(0, 0, 255, 0.1)); */
   background-color: rgba(59, 64, 134, 0.275);
@@ -640,14 +596,17 @@ id {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   line-height: 50px;
-
+  margin-left: 1.4em;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .left__tituloSub--dos {
-  font-size: 15px;
+  font-size: 20px;
   font-weight: 400;
-  margin-top: 5px;
+  margin-top: 10px;
+  margin-left: 2.8em;
+
+
 }
 
 .left__parrafo--dos {
@@ -657,12 +616,11 @@ id {
   line-height: 21px;
   margin-top: 10px;
   text-align: justify;
+  margin-left: 4em;
+
 }
 
 /* Pantalla dividida derecha*/
-#dividida__right {
-  /* scroll-margin-top: 0px; */
-}
 
 .dividida__right {
   grid-area: divRight;
@@ -1327,7 +1285,7 @@ summary {
   display: none;
   align-items: center;
   justify-content: center;
- 
+
 }
 
 .iglesia__modal--active {
@@ -1591,8 +1549,8 @@ summary {
   border: none;
   cursor: pointer;
   background-color: var(--color-uno);
-
 }
+
 
 /* ribbon */
 .ribbon {
@@ -1628,11 +1586,9 @@ summary {
 .cuarto {
   width: 100%;
   grid-area: cuarto;
-  background-color: white;
-  /* background: linear-gradient(90deg, #f1f1f1, #d5d5d5); */
-  background: url(img/cuartodeoracion.jpg);
-  background-size: 80em;
-  background-position-y: -6em;
+
+
+
   background-attachment: fixed;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -1645,6 +1601,8 @@ summary {
   position: relative;
   filter: contrast(1) brightness(1);
   margin-top: 120px;
+  background: url(img/Alabanza4.jpg);
+  background-size: cover;
 }
 
 
@@ -1658,19 +1616,23 @@ summary {
   right: 0;
   bottom: 0;
   z-index: 0;
-  background-color: rgba(0, 0, 0, .2);
-  /* border-radius: 28px; */
+  background: rgb(2, 0, 36);
+  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+  opacity: 0.7;
+
+  
 }
 
 
 .cuarto__texto {
-  width: 70%;
+  width: 50%;
   color: white;
   display: flex;
   flex-direction: column;
   align-items: baseline;
   text-align: left;
-  padding: 50px;
+  padding: 0 auto;
+  margin: 4em;
   z-index: 1;
 }
 
@@ -1686,20 +1648,21 @@ summary {
   color: white;
   font-size: 50px;
   font-weight: 600;
-  line-height: 40px;
+  line-height: 50px;
   margin-bottom: 10px;
   text-align: left;
 
 }
 
 .cuarto__linea {
-  width: 100%;
+  width: 50%;
   height: 2px;
   background-color: var(--color-uno);
   text-align: center;
 }
 
 .cuarto__parrafo {
+  width: 70%;
   color: white;
   font-size: 15px;
   line-height: 20px;
@@ -1721,14 +1684,37 @@ summary {
   margin: 0 auto;
   border: none;
   cursor: pointer;
-  color: white;
+  color: black;
 }
 
 .cuarto__btn:hover {
   border: none;
   cursor: pointer;
   background-color: var(--color-uno);
+}
 
+.cuarto__imagen {
+  width: 400px;
+  margin-right: 4em;
+  border: 3px solid white;
+
+  filter: contrast(1.3) brightness(1.4);
+}
+
+.cuarto__imagen--dos {
+  width: 200px;
+  position: absolute;
+  top: 360px;
+  left: 900px;
+  z-index: 99;
+}
+
+.cuarto__imagen--tres {
+  width: 300px;
+  position: absolute;
+  top: 220px;
+  right: 250px;
+  z-index: 9;
 }
 
 /* Testimonios */
