cambios responsive y fuera loading

--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -1526,83 +1526,10 @@
 /* Samsung Galaxy A20 (Sebastian) */
 @media only screen and (max-width: 425px) {
 
-    /* preloader */
-    /*flecha viene*/
-    .elemento__1 {
-        width: 12%;
-        font-size: 30px;
+    /* header */
+    .header::before{
+        background-color: rgba(0, 0, 0, .4);
     }
-
-    /*cruz*/
-    .elemento__2 {
-        width: 6%;
-
-    }
-
-    .vertical {
-        width: 4px;
-        height: 36px;
-    }
-
-    .horizontal {
-        width: 25px;
-        height: 5px;
-        top: 20px;
-    }
-
-    /*tumba*/
-    .elemento__3 {
-        width: 20%;
-    }
-
-    .circulo__1 {
-        width: 40px;
-        height: 40px;
-        border: 3px solid white;
-
-    }
-
-    .circulo__2 {
-        width: 40px;
-        height: 40px;
-        border: 4px solid white;
-        margin-left: 8px;
-    }
-
-    @keyframes mymove {
-        0% {
-            right: 0px;
-        }
-
-        25% {
-            right: 15px;
-        }
-
-        50% {
-            right: 15px;
-        }
-
-        100% {
-            right: 0px;
-        }
-    }
-
-    /*flecha q va */
-    /* .elemento__4 {
-        width: 2%;
-        font-size: 30px;
-    } */
-
-    /*flecha q vuelve */
-    /* .elemento__5 {
-        width: 10%;
-        font-size: 30px;
-        padding: 10px;
-    } */
-
-    /* .elemento__titulo {
-        font-size: 10px;
-    } */
 
     /* NavBar */
     .navbar__link {
@@ -1635,6 +1562,7 @@
     }
 
     .main::before {
+        background-color: rgba(0, 0, 0, 0.7);
         height: auto;
     }
 
@@ -1683,13 +1611,20 @@
 
     .article__card {
         width: 95%;
+        height: auto;
         box-shadow: none;
         border: 1px solid black;
     }
 
+    .article__texto{
+        width: 100%;
+        padding: 10px;
+    }
+
     .article__parrafo {
-        font-size: 20px;
-        line-height: 33px;
+        font-size: 27px;
+        line-height: 28px;
+        margin-top: 20px;
     }
 
     .article__pie {
@@ -1698,8 +1633,6 @@
         font-weight: 600;
         margin-top: 20px ;
         padding: 20px;
-        border: 1px solid black;
-        border-radius: 8px;
         text-align: center;
     }
 
@@ -1895,7 +1828,7 @@
         align-items: center;
         justify-content: center;
         text-align: center;
-        margin: 20px auto;
+        margin: 50px auto;
     }
 
     .cuarto__titulo {
@@ -1914,6 +1847,7 @@
         font-size: 14px;
         line-height: 20px;
         text-align: justify;
+        margin: 35px auto;
     }
 
     .cuarto__btn{
@@ -1950,7 +1884,7 @@
     }
 
     .mision__texto {
-        width: 95%;
+        width: 100%;
     }
 
     .mision__parrafo {
@@ -2086,6 +2020,7 @@
     .mision img {
         width: 300px;
     }
+   
 
 
 
