--- a/css/reuniones.css
+++ b/css/reuniones.css
@@ -11,9 +11,6 @@
 
 body {
     font-size: 15pt;
-    /* background: url('img/header.jpg');
-  background-size: cover;
-  background-repeat: no-repeat; */
     background-color: whitesmoke;
 
 }
@@ -36,7 +33,6 @@ section[id] {
     margin: 1.2em auto;
     grid-gap: .7em;
     display: grid;
-
 
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
@@ -135,7 +131,7 @@ section[id] {
 
 
 /*Precursores (Videos de Youtube*/
-.aside__youtube {
+.aside__reuniones {
     width: 100%;
     height: auto;
     grid-area: aside;
@@ -145,12 +141,12 @@ section[id] {
     justify-content: center;
     padding: 0;
     position: relative;
-    background: url(img/main.png);
+    background: url(/img/main.png);
     background-size: cover;
     background-attachment: fixed;
 }
 
-.aside__youtube::before {
+.aside__reuniones::before {
     width: 100%;
     height: 100%;
     content: '';
@@ -163,7 +159,7 @@ section[id] {
     z-index: 0;
 }
 
-.aside__texto {
+.aside__texto--reuniones {
     width: 100%;
     height: auto;
     text-align: center;
@@ -172,20 +168,20 @@ section[id] {
     margin-top: 6em;
 }
 
-.aside__titulo {
+.aside__titulo--reuniones {
     font-size: 65px;
     font-family: 'Montserrat', sans-serif;
     margin: 15px auto;
     letter-spacing: 8px;
 }
 
-.aside__subtitulo {
+.aside__subtitulo--reuniones {
     font-size: 1em;
     margin-top: 30px;
     letter-spacing: 10px;
 }
 
-.aside__iframe{
+.aside__iframe--reuniones {
     width: 70%;
     display: flex;
     flex-wrap: wrap;
@@ -195,10 +191,58 @@ section[id] {
     z-index: 1;
 }
 
-.aside__iframe iframe {
+.aside__iframe--reuniones iframe {
     width: 400px;
     height: 300px;
     margin: 4em auto;
+}
+
+/* aside ultimas reuniones */
+.aside__texto3--reuniones {
+    width: 100%;
+    height: auto;
+    text-align: center;
+    color: white;
+    z-index: 1;
+    margin: 6em auto 2em;
+}
+
+.aside__titulo3--reuniones {
+    font-size: 65px;
+    font-family: 'Montserrat', sans-serif;
+    margin: 15px auto;
+    letter-spacing: 8px;
+}
+
+.aside__subtitulo3--reuniones {
+    font-size: 1em;
+    margin-top: 30px;
+    letter-spacing: 10px;
+}
+
+.aside__btn {
+    z-index: 1;
+    background-color: var(--color-uno);
+    border-radius: 8px;
+    padding: 8px;
+    margin: 2em auto 4em;
+    cursor: pointer;
+}
+
+.aside__social {
+    font-size: 1em;
+    display: inline-flex;
+    color: white;
+    z-index: 999
+}
+
+.aside__social i {
+    margin: 15px;
+}
+
+.aside__social i:hover {
+    color: var(--color-tres);
+    transform: scale(1.2);
 }
 
 
@@ -226,6 +270,7 @@ section[id] {
     font-weight: 600;
     font-family: 'Montserrat', sans-serif;
 }
+
 
 
 /* `sm` applies to x-small devices (portrait phones, less than 576px)*/
@@ -281,3 +326,5 @@ section[id] {
     }
 
 }
+
+
