--- a/css/podcast.css
+++ b/css/podcast.css
@@ -11,9 +11,6 @@
 
 body {
     font-size: 15pt;
-    /* background: url('img/header.jpg');
-  background-size: cover;
-  background-repeat: no-repeat; */
     background-color: whitesmoke;
 
 }
@@ -144,7 +141,7 @@ section[id] {
     justify-content: center;
     padding: 0;
     position: relative;
-    background: url(img/main.png);
+    background: url(/img/main.png);
     background-size: cover;
     background-attachment: fixed;
 }
