--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ id {
 .main {
   width: 100%;
   height: 450px;
-  background: url(/img/main\ portada\ voltear.png);
+  background: url(../img/main\ portada\ voltear.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
