--- a/css/mediaQuerys.css
+++ b/css/mediaQuerys.css
@@ -1419,8 +1419,9 @@
 @media only screen and (max-width: 450px) {
 
     .main {
+        background: url(/img/main\ portada.png);
         background-position: center;
-        background-size: 1200px;
+        background-size: cover;
     }
 
     /*banner*/
@@ -1555,10 +1556,11 @@
     }
 
     .main {
-        background-position-y: -3em;
-        background-position-x: -25em ;
-        background-size: 50em;
-        background-attachment: none;
+        /* background-position-y: -3em;
+        background-position-x: -25em ; */
+        background-size: cover;
+        background-attachment:fixed;
+        background-repeat: no-repeat;
     }
 
     .main::before {
