arreglo ruta de img

--- a/css/cuarto.css
+++ b/css/cuarto.css
@@ -137,7 +137,7 @@ section[id] {
     width: 100%;
     height: 100vh;
     grid-area: cuartos;
-    background: url(img/cuartodeoracion.jpg);
+    background: url('../img/cuartodeoracion.jpg');
     margin: 0 auto;
     display: flex;
     flex-direction: column;
