--- a/css/podcast.css
+++ b/css/podcast.css
@@ -141,7 +141,7 @@ section[id] {
     justify-content: center;
     padding: 0;
     position: relative;
-    background: url(/img/main.png);
+    background: url('../img/main.png');
     background-size: cover;
     background-attachment: fixed;
 }
