--- a/css/precursores.css
+++ b/css/precursores.css
@@ -142,7 +142,7 @@ section[id] {
     justify-content: center;
     padding: 0;
     position: relative;
-    background: url(/img/main.png);
+    background: url('../img/main.png');
     background-size: cover;
     background-attachment: fixed;
 }
