--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ id {
 .header {
   width: 100%;
   height: 100px;
-  background: url('/img/banner_header.png');
+  background: url('../img/banner_header.png');
   background-repeat: no-repeat;
   background-size: cover;
   grid-area: header;
@@ -308,7 +308,7 @@ id {
 .main {
   width: 100%;
   height: 450px;
-  background: url(../img/main\ portada\ voltear.png);
+  background: url('../img/main\ portada\ voltear.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -533,7 +533,7 @@ id {
 .dividida__left {
   grid-area: divLeft;
   height: auto;
-  background-image: url(/img/nosotrosDos.jpg);
+  background-image: url('../img/nosotrosDos.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -616,7 +616,7 @@ id {
 .dividida__right {
   grid-area: divRight;
   height: auto;
-  background-image: url(/img/javier.jpg);
+  background-image: url('../img/javier.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -692,7 +692,7 @@ id {
 /* banner */
 .banner {
   grid-area: banner;
-  background: url(/img/nubes\ banner.jpg);
+  background: url('../img/nubes\ banner.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -876,7 +876,7 @@ summary {
   align-items: center;
   justify-content: space-between;
   position: relative;
-  background: url(/img/multimedia.jpg);
+  background: url('../img/multimedia.jpg');
   background-size: cover;
   background-attachment: fixed;
   gap: 5px;
@@ -1203,22 +1203,22 @@ summary {
 
 /*preAdolescentes*/
 .iglesia__imagen--preAdolescentes {
-  background: url('/img/preadolescentes.jpeg');
+  background: url('../img/preadolescentes.jpeg');
 }
 
 /*jovenes*/
 .iglesia__imagen--jovenes {
-  background: url('/img/jovenes(nuevo).jpg');
+  background: url('../img/jovenes(nuevo).jpg');
 }
 
 /*matrimonios grandes*/
 .iglesia__imagen--matrimoniosGrandes {
-  background: url('/img/matrimonios\(nuevo\).jpg');
+  background: url('../img/matrimonios\(nuevo\).jpg');
 }
 
 /*matrimonios jovenes*/
 .iglesia__imagen--matrimoniosJovenes {
-  background: url('/img/matri\ joven.jpg');
+  background: url('../img/matri\ joven.jpg');
 }
 
 .iglesia__imagen {
@@ -1318,7 +1318,7 @@ summary {
   width: 100%;
   height: auto;
   grid-area: ministerio;
-  background: url(/img/main2.jpg);
+  background: url('../img/main2.jpg');
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -1411,23 +1411,23 @@ summary {
 
 /* Modificadores imagenes Cards 1-5 */
 .ministerio__card__imagen--social {
-  background: url(/img/niñosDos.jpg);
+  background: url('../img/niñosDos.jpg');
 }
 
 .ministerio__card__imagen--evangelismo {
-  background: url(/img/evangelismo.jpg);
+  background: url('../img/evangelismo.jpg');
 }
 
 .ministerio__card__imagen--enseñanza {
-  background: url(/img/cuarto3.jpg);
+  background: url('../img/cuarto3.jpg');
 }
 
 .ministerio__card__imagen--intersecion {
-  background: url(/img/galeriaOcho.jpg);
+  background: url('../img/galeriaOcho.jpg');
 }
 
 .ministerio__card__imagen--alabanza {
-  background: url(/img/galeriaUno.jpg);
+  background: url('../img/galeriaUno.jpg');
 }
 
 .ministerio__card__imagen {
@@ -1558,7 +1558,7 @@ summary {
   position: relative;
   filter: contrast(1) brightness(1);
   margin-top: 120px;
-  background: url(/img/Alabanza4.jpg);
+  background: url('../img/Alabanza4.jpg');
   background-size: cover;
 }
 
@@ -1961,7 +1961,7 @@ summary {
 /*Formulario*/
 .form {
   width: 100%;
-  background: url(/img/formulario.png);
+  background: url('../img/formulario.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
