--- a/css/style.css
+++ b/css/style.css
@@ -1573,7 +1573,7 @@ summary {
   bottom: 0;
   z-index: 0;
   background: rgb(2, 0, 36);
-  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+  background: linear-gradient(90deg, rgb(3, 2, 15) 9%, rgb(2, 2, 26) 35%, rgb(0, 13, 15) 100%);
   opacity: 0.7;
 }
 
